[package]
name = "w"
version = "0.1.0"
authors = ["Yu-Wei Wu <wusyong9104@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "w-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
mobile-entry-point = "0.1.0"
tao = { git = "https://github.com/tauri-apps/tao", branch = "next" }

[target.'cfg(target_os = "android")'.dependencies]
android_logger = "0.9.0"
log = "0.4.11"
jni = "0.18.0"
ndk = "0.6"
ndk-glue = "0.6"

[target.'cfg(not(target_os = "android"))'.dependencies]
simple_logger = "1.11.0"
